Bugs 46134. Use caret ('^') character to concatenate text. Fix nsPromiseSubstring usage. r=rjc. Bug 46686. Update container attrs *before* we nuke the bestmatch. r=rjc